--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -7,22 +7,28 @@
             <a href="/admin/dashboard" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-tachometer-alt me-2"></i>Dashboard
             </a>
-            <a href="/admin/produk" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <a href="/admin/produk" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-project-diagram me-2"></i>Produk
             </a>
-            <a href="/admin/order" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <a href="/admin/order" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-chart-line me-2"></i>Order
             </a>
-            <a href="/admin/transaksi" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <a href="/admin/kembalian" class="list-group-item list-group-item-action bg-transparent second-text active">
+                <i class="fas fa-project-diagram me-2"></i>Kembalian
+            </a>
+            <a href="/admin/transaksi" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-shopping-cart me-2"></i>Transaksi
             </a>
-            <a href="/admin/ulasan" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <a href="/admin/pemasukan" class="list-group-item list-group-item-action bg-transparent second-text active">
+                <i class="fas fa-shopping-cart me-2"></i>Pemasukan
+            </a>
+            <a href="/admin/ulasan" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-project-diagram me-2"></i>Ulasan Produk
             </a>
-            <a href="/admin/user" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <a href="/admin/user" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-project-diagram me-2"></i>Akun User
             </a>
-            <a href="/admin/logout" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">
+            <a href="/admin/logout" class="list-group-item list-group-item-action bg-transparent text-danger active">
                 <i class="fas fa-power-off me-2"></i>Logout
             </a>
         </div>
