--- a/views/admin/pemasukan_produk.ejs
+++ b/views/admin/pemasukan_produk.ejs
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="../css/styles.css"/>
+    <link rel="stylesheet" href="../../../css/styles.css"/>
     <title>Document</title>
 </head>
 <body>
     <%- include('../template/nav.ejs') %>
     <div class="container-fluid px-4">
-        <a href="/admin/produk/create" class="btn btn-primary" style="margin-top: 5px;margin-bottom: 10px;">Tambah Produk</a>
         <table class="table table-bordered border-dark table-hover bg">
             <thead class="bg-light">
               <tr>
@@ -20,7 +19,6 @@
                 <th scope="col">Nama Barang</th>
                 <th scope="col">Deskripsi</th>
                 <th scope="col">Harga</th>
-                <th scope="col">Status</th>
                 <th scope="col">Gambar</th>
                 <th>Action</th>
               </tr>
@@ -32,16 +30,9 @@
                         <th><%= e.nama_barang %> </th>
                         <td><%= e.deskripsi %> </td>
                         <td><%= e.harga %> </td>
-                        <td><% if (e.status === 1) { %>
-                            Tersedia
-                        <% } else { %>
-                            Kosong
-                        <% } %> 
-                         </td>
-                        <td><img src="../img/<%= e.gambar %>" width="60px" height="60px"></td>
+                        <td><img src="../../../img/<%= e.gambar %>" width="60px" height="60px"></td>
                         <td>
-                            <a href="/admin/produk/edit/<%= e.id_barang %> " class="btn btn-warning">Edit</a>
-                            <!-- <a href="/admin/api/produk/delete/<%= e.id_barang %> " class="btn btn-danger">Delete</a> -->
+                            <a href="/admin/pemasukan/create/<%= e.id_barang %> " class="btn btn-warning">Order</a>
                         </td>
                     </tr>
                 <% }) %>
@@ -58,6 +49,6 @@
     toggleButton.onclick = function () {
         el.classList.toggle("toggled");
     };
-    const change = document.getElementById('title').innerHTML = "Produk";
+    const change = document.getElementById('title').innerHTML = "Pemasukan";
 </script>
 </html>
