menambah fitur pengeluaran

--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -22,6 +22,9 @@
             <a href="/admin/pemasukan" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-shopping-cart me-2"></i>Pemasukan
             </a>
+            <a href="/admin/pengeluaran" class="list-group-item list-group-item-action bg-transparent second-text active">
+                <i class="fas fa-shopping-cart me-2"></i>Pengeluaran
+            </a>
             <a href="/admin/ulasan" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-project-diagram me-2"></i>Ulasan Produk
             </a>
