menambah button batal

--- a/views/admin/order_view.ejs
+++ b/views/admin/order_view.ejs
@@ -61,6 +61,6 @@
     toggleButton.onclick = function () {
         el.classList.toggle("toggled");
     };
-    const change = document.getElementById('title').innerHTML = "Order";
+    const change = document.getElementById('title').innerHTML = "Pemesanan";
 </script>
 </html>
