--- a/views/admin/pengeluaran_update.ejs
+++ b/views/admin/pengeluaran_update.ejs
@@ -41,7 +41,8 @@
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Pembayaran</label>
             <input type="file" class="form-control" id="image" name="pembayaran" value="<%= Pengeluaran.info %>">
-          </div>       
+          </div> 
+          <a href="/admin/pengeluaran" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>      
           <button type="submit" class="btn btn-primary" id="submit">Submit</button>
       </form>
     </div>
