--- a/views/admin/produk_create.ejs
+++ b/views/admin/produk_create.ejs
@@ -36,8 +36,9 @@
               <option value="1">Aktif</option>
               <option value="0">Kosong</option>
             </select>
-          </div>          
-          <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+          </div>
+          <a href="/admin/produk" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>          
+          <button type="submit" class="btn btn-primary" id="submit">Simpan</button>
         </form>
       </div>
     </div>
