--- a/views/admin/produk_update.ejs
+++ b/views/admin/produk_update.ejs
@@ -37,8 +37,8 @@
             <option value="0">Kosong</option>
           </select>
         </div>   
-        
-        <button type="submit" class="btn btn-primary" id="submit">Edit</button>
+        <a href="/admin/produk" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>
+        <button type="submit" class="btn btn-primary" id="submit">Simpan</button>
       </form>
     </div>
   </div>
