--- a/views/admin/transaksi_view.ejs
+++ b/views/admin/transaksi_view.ejs
@@ -55,6 +55,6 @@
         toggleButton.onclick = function () {
             el.classList.toggle("toggled");
         };
-        const change = document.getElementById('title').innerHTML = "Transaksi";
+        const change = document.getElementById('title').innerHTML = "Riwayat Pemesanan";
     </script>
 </html>
