--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -11,13 +11,13 @@
                 <i class="fas fa-project-diagram me-2"></i>Produk
             </a>
             <a href="/admin/order" class="list-group-item list-group-item-action bg-transparent second-text active">
-                <i class="fas fa-chart-line me-2"></i>Order
+                <i class="fas fa-chart-line me-2"></i>Pemesanan
             </a>
             <a href="/admin/kembalian" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-project-diagram me-2"></i>Kembalian
             </a>
             <a href="/admin/transaksi" class="list-group-item list-group-item-action bg-transparent second-text active">
-                <i class="fas fa-shopping-cart me-2"></i>Transaksi
+                <i class="fas fa-shopping-cart me-2"></i>Riwayat Pemesanan
             </a>
             <a href="/admin/pemasukan" class="list-group-item list-group-item-action bg-transparent second-text active">
                 <i class="fas fa-shopping-cart me-2"></i>Pemasukan
