--- a/views/user/rating_create.ejs
+++ b/views/user/rating_create.ejs
@@ -32,7 +32,8 @@
             <label for="exampleInputEmail1" class="form-label">Pesan</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="pesan"></textarea>
           </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+          <a href="/user/transaksi/<%= user.nama_pembeli %>" type="button" class="btn btn-danger" style="margin-left: 80px;">Batal</a>
+          <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       </div>
       </div>
