--- a/views/admin/pemasukan_create.ejs
+++ b/views/admin/pemasukan_create.ejs
@@ -21,8 +21,9 @@
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Bukti Pembelian</label>
             <input type="file" class="form-control" id="info" name="info">
-          </div>        
-          <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+          </div>
+          <a href="/admin/pemasukan" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>        
+          <button type="submit" class="btn btn-primary" id="submit">Simpan</button>
         </form>
       </div>
     </div>
