--- a/views/admin/pemasukan_update.ejs
+++ b/views/admin/pemasukan_update.ejs
@@ -22,7 +22,7 @@
           <label for="exampleInputPassword1" class="form-label">Pembayaran</label>
           <input type="file" class="form-control" id="image" name="info">
         </div>
-        
+        <a href="/admin/pemasukan" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>
         <button type="submit" class="btn btn-primary" id="submit">Edit</button>
       </form>
     </div>
