menambah button batal

--- a/views/admin/pemasukan_update.ejs
+++ b/views/admin/pemasukan_update.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Pembayaran</label>
-          <input type="file" class="form-control" id="image" name="info">
+          <input type="file" class="form-control" id="image" name="info" accept="image/*">
         </div>
         <a href="/admin/pemasukan" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>
         <button type="submit" class="btn btn-primary" id="submit">Edit</button>
