--- a/views/admin/kembalian_update.ejs
+++ b/views/admin/kembalian_update.ejs
@@ -17,10 +17,10 @@
           <h4 style="text-align: center;">Tambahkan Bukti Kembalian</h4>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Bukti Kembalian</label>
-          <input type="file" class="form-control" id="image" name="gambar" accept="image/*">
+          <input type="file" class="form-control" id="image" name="gambar" accept="image/*" >
         </div>
-        
-        <button type="submit" class="btn btn-primary" id="submit" style="margin-left: 120px;">Edit</button>
+        <a href="/admin/kembalian" type="button" class="btn btn-danger" id="submit" style="margin-left: 100px;">Batal</a>
+        <button type="submit" class="btn btn-primary" id="submit"">Edit</button>
       </form>
     </div>
   </div>
