--- a/views/admin/pemasukan_create.ejs
+++ b/views/admin/pemasukan_create.ejs
@@ -20,7 +20,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Bukti Pembelian</label>
-            <input type="file" class="form-control" id="info" name="info">
+            <input type="file" class="form-control" id="info" name="info" accept="image/*">
           </div>
           <a href="/admin/pemasukan" type="button" class="btn btn-danger" id="submit" style="margin-left: 80px;">Batal</a>        
           <button type="submit" class="btn btn-primary" id="submit">Simpan</button>
