--- a/views/admin/produk_create.ejs
+++ b/views/admin/produk_create.ejs
@@ -28,7 +28,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Gambar</label>
-            <input type="file" class="form-control" id="image" name="gambar">
+            <input type="file" class="form-control" id="image" name="gambar" accept="image/*">
           </div>
           <div class="mb-3">
             <label ffor="exampleInputPassword1" class="form-label">Status Produk</label>
